themes/documentation/css/main.css
/* ... */
  .Page__header:after,
  .Page__header:before {
      content: " ";
      display: table;
  }

  .Page__header:after {
      clear: both;
  }

  .Page__header h1 {
      line-height: 1.6;
      margin-bottom: 10px;
  }

  .Page__header--separator {
      height: .6em;
  }

  .Page__header a {
      text-decoration: none;
  }

  .Page__header a {
      color: #222222;
  }

  .Page__header .ModifiedDate {
      float: left;
      font-size: 10px;
      color: gray;
  }

  /* # Sidebar */
  .Columns__left .Collapsible__content {
      margin: 0 20px;
  }

  .Columns__left .Brand {
      text-align: center;
      flex-grow: 1;
      order: -1;
      font-size: 2rem;
  }

  .Columns__left .Search {
      margin: 0;
      width: 100%;
  }

  .Columns__left input {
      border: 1px solid #ccc;
      margin: 20px;
  }

  .Columns__left svg {
      display: none;
  }

/* 7. Responsive */
@media screen and (min-width:1200px) {
  .Container {
      width: 1170px;
  }
}

@media screen and (min-width:992px) {
  /* .Container {
      width: 970px;
  } */
}

@media screen and (min-width:769px) {
  .HomepageContent {
      padding: 40px 20px;
  }

  .HomepageContent .Row__quarter {
      float: left;
      position: relative;
      min-height: 1px;
      padding-left: 15px;
      padding-right: 15px;
  }

  .HomepageContent .Row__quarter {
      width: 25%;
  }

  /* .Container {
      width: 750px;
  } */

  .Navbar {
      position: fixed;
      z-index: 1030;
      width: 100%;
  }

  .Collapsible__trigger {
      display: none !important;
  }

  .Collapsible__content {
      display: block !important;
  }

  .Columns {
      max-width: 1366px;
      margin: 0 auto;
      height: 100%;
      box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.1);
  }

  .Columns:after,
  .Columns:before {
      content: " ";
      display: table;
  }

  .Columns:after {
      clear: both;
  }

  .Columns__left,
  .Columns__right {
      position: relative;
      display: block;
      min-height: 1px;
      float: left;
      overflow: auto;
      height: 100%;
  }

  .Columns__left {
      width: 25%;
      border-right: 1px solid #e7e7e9;
      overflow-x: hidden;        
  }

  .Columns__left::-webkit-scrollbar,
  .Columns__right::-webkit-scrollbar {
    width: 12px;
    background-color: #F5F5F5;
  }

  .Columns__left::-webkit-scrollbar-track,
  .Columns__right::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    background-color: #F5F5F5;
  }

  .Columns__left::-webkit-scrollbar,
  .Columns__right::-webkit-scrollbar {
    width: 5px;
    background-color: #F5F5F5;
  }

  .Columns__right::-webkit-scrollbar {
      width: 7px;
  }

  .Columns__left::-webkit-scrollbar-thumb,
  .Columns__right::-webkit-scrollbar-thumb {
      background-color: rgba(0, 0, 0, 0.6);
      border-radius: 50px;
  }

  .Columns__right {
      width: 75%;
  }

  .Columns__right__content {
      padding: 0 20px 20px;
      min-height: 100%;
      width: 100%;
      background-color: #fff;    
  }
}

/* Responsive */
  @media only screen and (max-width:992px) {
    .category-list .category-wrap {
        width: 33.33333334%;
    }

    #docsSearch #searchBar {
        width: 570px;
    }
  }

  @media only screen and (max-width:768px) {
    .category-list .category-wrap {
        width: 50%;
    }

    #docsSearch {
        padding: 10px 10px 85px 10px;
    }

    #docsSearch #searchBar {
        width: 570px;
    }

    .HomepageFooter {
        padding: 0 20px;
        text-align: center;
    }

    .HomepageButtons .Button--hero {
        display: block;
        margin-bottom: 10px;
    }
  }

  @media only screen and (max-width:600px) {
    .category-list .category-wrap {
        width: 45%;
        padding: 0;
    }

    #docsSearch #searchBar {
        width: 370px;
    }

    .HomepageContent {
        padding: 0;
    }
  }

  @media only screen and (max-width:375px) {
    .category-list .category-wrap {
        width: 100%;
        padding: 0 15px;
    }

    #docsSearch #searchBar {
        width: 250px;
    }

    #docsSearch {
        padding: 10px 0;
    }

    #docsSearch h1 {
        font-size: 28px;
    }

    #docsSearch .caption {
        font-size: 20px;
        line-height: 25px;
    }

    #docsSearch #searchBar .search-query {
        font-size: 14px;
        padding: 0px 15px;
    }
  }

